Change TreeHouse Link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <footer class="footer-center items-center p-4 bg-neutral text-neutral-content center">
-            <p><a href="https://teamtreehouse.com/profiles/berianlowe2">Berian Lowe</a></p>
+            <p><a href="https://teamtreehouse.com/profiles/berianl">Berian Lowe</a></p>
         </footer>
       </main>
     <script src="js/story.js"></script>    
