--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html data-theme="dracula">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JavaScript Basics – Challenge</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css"/>
     <link rel="stylesheet" href="https://use.typekit.net/zgo6fle.css">
